# BinPackLib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/BinPackLib/: FileSystem.h  PackFiles.h  PackedFile.h  ReadStream.h  Types.h
src/: Compression.cpp  Compression.h  Crc32.cpp  FileSystem.cpp  Internal.h  PackFiles.cpp  PackedFile.cpp  ReadStream.cpp  Types.cpp
tests/: BinPackLibTests.cpp  BpackCliTests.cmake
tools/bpack_cli/: main.cpp
